fix:change name github for deploy

--- a/app/package.json
+++ b/app/package.json
@@ -1,6 +1,6 @@
 {
   "name": "app",
-  "homepage": "https://Nekipel/project-management-app",
+  "homepage": "https://Nekipel.github.io/project-management-app",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
