--- a/app/package.json
+++ b/app/package.json
@@ -8,11 +8,13 @@
     "@emotion/styled": "^11.10.5",
     "@mui/icons-material": "^5.10.14",
     "@mui/material": "^5.10.14",
+    "@react-native-async-storage/async-storage": "^1.17.11",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "@types/jest": "^27.5.2",
     "@types/node": "^16.18.3",
+    "@types/parse": "^3.0.1",
     "@types/react": "^18.0.25",
     "@types/react-dom": "^18.0.9",
     "@typescript-eslint/eslint-plugin": "^5.22.0",
@@ -28,11 +30,13 @@
     "i18next-browser-languagedetector": "^7.0.1",
     "i18next-http-backend": "^2.0.1",
     "lint-staged": "^12.4.1",
+    "parse": "^3.5.0",
     "prettier": "^2.6.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-i18next": "^12.0.0",
     "react-scripts": "5.0.1",
+    "require": "^2.4.20",
     "typescript": "^4.9.3",
     "web-vitals": "^2.1.4"
   },
