--- a/app/package.json
+++ b/app/package.json
@@ -39,6 +39,7 @@
     "react-i18next": "^12.0.0",
     "react-router-dom": "^6.4.3",
     "react-scripts": "5.0.1",
+    "@reduxjs/toolkit": "^1.9.2",
     "typescript": "^4.9.3",
     "web-vitals": "^2.1.4"
   },
